# spora-io

./: .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml
docs/: add_dataset.rst  changelog.rst  concepts.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst  tools.rst
docs/api/: channels.rst  datasets.rst  index.rst  types.rst  utils.rst
examples/: demo.ipynb
scripts/: cli_marker.py  compute_normalization_stats.py  compute_standardization_stats.py  compute_tiling.py  datasets_viz.py  marker_viz.py  tile_viz.py  viz_datasets.py
spatialprot_data/: __init__.py
spatialprot_data/datasets/: __init__.py  _types.py  base.py  compose.py  he.py  ihc.py  multiplex.py
spatialprot_data/utils/: __init__.py  utils.py
spatialprot_data/utils/dataset/: __init__.py  collate.py  normalize.py  normalize.py.bkp  standardize.py  transforms.py
spatialprot_data/utils/helpers/: __init__.py  crop.py  std.py
spora_io/: __init__.py  _config.py
spora_io/datasets/: __init__.py  _types.py  base.py  compose.py  he.py  ihc.py  multiplex.py  spora.py
spora_io/utils/: __init__.py  printing_utils.py  utils.py
spora_io/utils/dataset/: __init__.py  channels.py  collate.py  marker.py  standardize.py  transforms.py
spora_io/utils/helpers/: __init__.py  std.py  tile.py
tests/: conftest.py  test_channel_selection.py  test_composed_dataset.py  test_datasets.py  test_he_dataset.py  test_multiplex_dataset.py  test_normalization.py  test_tiling.py
